--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -8,6 +8,16 @@
  <h1>To Do Applications</h1>
 </body>
 <div>
+    <form action="/" method="post">
+        <div>
+            <input type="text" name="title" placeholder="Add a new task..." required>
+        </div>
+        <div>
+            <button type="sumbit">Add</button>
+        </div>
+    </form>
+</div>
+<div>
     <th:block th:each="task : ${tasks}">
         <div>
             <span th:text="${task.title}">Task Title</span>
