--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>To Do Applications</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
  <h1>To Do Applications</h1>
 </body>
-<div>
+<div class="mt-5 text-center">
     <form action="/" method="post">
         <div>
             <input type="text" name="title" placeholder="Add a new task..." required>
