--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.thymeleaf.org" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>To Do Applications</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <style>
+        .text-strikethrough {
+        text-decoration: line-through;
+        color: gray;
+        }
+    </style>
 </head>
 <body>
- <h1>To Do Applications</h1>
+    <div class="container">
+        <h1 class="mt-5 text-center">To Do Applications</h1>
+        <form action="/" method="post" class="mt-3">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <input class="form-control form-control-lg" type="text" name="title" placeholder="Add a new task..." required>
+                </div>
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-primary btn-lg w-100">Add</button>
+                </div>
+            </div>
+        </form>
+
+        <div class="mt-4">
+            <th:block th:each="task : ${tasks}">
+                <div class="card mb-2">
+                    <div class="card-body d-flex justify-content-between align-items-center">
+                        <span th:classappend="${task.completed} ? 'text-strikethrough'" th:text="${task.title}">Task Title</span>
+                        <div>
+                            <a th:href="@{/{id}/toggle(id=${task.id})}" class="btn btn-outline-secondary btn-sm">Toggle</a>
+                            <a th:href="@{/{id}/delete(id=${task.id})}" class="btn btn-outline-danger btn-sm ml-2">Delete</a>
+                        </div>
+                    </div>
+                </div>
+            </th:block>
+        </div>
+    </div>
 </body>
-<div class="mt-5 text-center">
-    <form action="/" method="post">
-        <div>
-            <input type="text" name="title" placeholder="Add a new task..." required>
-        </div>
-        <div>
-            <button type="sumbit">Add</button>
-        </div>
-    </form>
-</div>
-<div>
-    <th:block th:each="task : ${tasks}">
-        <div>
-            <span th:text="${task.title}">Task Title</span>
-        </div>
-
-    </th:block>
-</div>
-
 </html>
